--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel = "stylesheet" type = "text/css" href = "Styles/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
 </head>
 <body>
 </body>
